# Code-Katas

./: .gitignore  CodeKata.js  Makefile  pyproject.toml  report.20200315.142604.30309.0.001.json  report.20200315.142615.30334.0.001.json
Code-Katas/: Help.txt
Code-Katas/Javascript/: Cakes.js  CatandMouse.js  DecypherThis.js  DescendingOrder.js  EvenOrOdd.js  FirstNonRepeatingLetter.js  JadenCaseStrings.js  MissingLetter.js  Permutations.js  PigLatin.js  ProductOfConseutiveFibNumbers.js  RailFenceCipher.js  RemoveVowels.js  ReverseString.js  RomanNumeralsHelper.js  Square.js  StringEndsWith.js  SumArray.js  SumOfPositive.js  TimeDurrationFormatting.js  URLSpaceFormatter.js  VigenèreCipher.js  toWeirdCase.js
Code-Katas/Python/: Anagrams.py  BreakCamelCase.py  CardGame.py  CardGame.txt  CountSmiles.py  DoublyLinkedLists.py  DuplicateEncoder.py  FindOddInt.py  FindUniqueNumber.py  HighestScoringWord.py  HumanReadableDuration.py  Maskify.py  MoveZerosToEnd.py  NameStringFormat.py  NeedleInHaystack.py  OppositesAttract.py  Order.py  Pangram.py  PigLatin.py  RangeExtraction.py  RemoveVowels.py  ReverseString.py  ReverseWords.py  SmallestPossibleSum.py  SortBinaryTreeByLevels.py  Square.py  StringsMix.py  SumArray.py  TicTacToeChecker.py  UniqueOrder.py  (+6 more)
Javascript/: JadenCaseStrings.js  NeedleInHaystack.js  Square.js  UnrollMatrix.js
Python/: NeedleInHaystack.py  ReverseString.py  lengthConversions.py
Regex Practice/: ReturnLetters.js  ReturnNumbers.js  ReturnSeperateNumbersAndLetters.js
algorithms/: Readme.md
regex-practice/: ReturnLetters.py  ReturnNumbers.py
(+15 files in other folders)
