[tool.poetry]
name = "code-katas"
version = "0.1.0"
description = ""
authors = ["Max Gunter <maxgunter99@gmail.com>"]
readme = "README.md"
packages = [{include = "code_katas"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
